1-http/green/ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green
spec:
  rules:
  - host: green.ingress.tipjam.xyz
    http:
      paths:
      - backend:
          service:
            name: green
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - green.ingress.tipjam.xyz
    secretName: green
